Revision history for Perl extension File::Remove.

1.41 Mon  2 Jun 2008
	- No functional changes
	- Updating location of author tests

1.40 Sat 23 Feb 2008
	- Dev release looks good, changing to production release

1.39_01 Wed 20 Feb 2008 (Adam Kennedy)
	- Fixed rt.cpan.org #30251 "removing dirs enclosed by curly braces"
	- remove now ignores globbing if -e is true BEFORE globbing
	  (This should fix numerous possible failures where people are trying
	   delete strangely named files, but globbing is kicking in and
	   expanding the names incorrectly)
	- Moving to a production-grade version to indicate module stability
	- Adding explicit 5.005 dependency
	  (Primarily for the benefit of automated quality/anaylsis tools)

0.39 Mon 12 Nov 2007  (Adam Kennedy)
	- No functional changes
	- Updating to Module::Install 0.68

0.38 Mon 15 Oct 2007  (Adam Kennedy)
	- Removed an extremely dangerous and reckless test case that tried
	  to delete a soft link to root and (when it failed) deleted the
	  actual root directory.

0.37 Sun  8 Jul 2007  (Adam Kennedy)
	- Restoring support for broken symlinks (Marek Rouchal)
	- Adding tests for the broken symlink case (Marek Rouchal)
	- Tidying up the Changes file a bit

0.36 Fri 30 Jun 2007  (Adam Kennedy)
	- Avoid the installation of Mac::Glue.
	  (It should not be necesary to test voice synthesis to delete a file)
	- Anyone truly needing "trash" support will need to add a dependency
	  on Mac::Glue themself. The function may be split out of File::Remove
	  later down the track.
	- Constanting the debugger flag for a minor speed and memory improvement
	- Copy in a known-readonly flag for more accurate testing on Win32
	- Remove assumption that -w implied deletion rights on Win32
	- Validate that the file was actually deleted.
	- Add better mode-handling for files.
	- Add smarter implementation of "candelete" logic.

0.35 Fri  9 Feb 2007  (Stephen Steneker)
	- Update makefile to require Mac::Glue version compatible with Intel macs