@@ -3,6 +3,7 @@ Revision history for Perl extension File::Remove.
 1.41 Mon  2 Jun 2008
 	- No functional changes
 	- Updating location of author tests
+	- Switching to Module::Install again, to generate a better META.yml
 
 1.40 Sat 23 Feb 2008
 	- Dev release looks good, changing to production release
